# currency

./: .gitignore  CMakeLists.txt  README.md  README.wiki
cmake/: FindCurrencyBuild.cmake  FindCurrencyCXXFlags.cmake  FindCurrencyCodeAliases.cmake  FindCurrencyCodeHeader.cmake  FindCurrencyCompilationDep.cmake  FindCurrencyDoxygen.cmake  FindCurrencyGitInfo.cmake  FindCurrencyInstall.cmake  FindCurrencyNinja.cmake  FindCurrencyPackage.cmake  FindCurrencyPlantUML.cmake  FindCurrencyRules.cmake  FindCurrencyVersionHeader.cmake  FindCurrencyVersionInfo.cmake
include/: README.md
mock/: CMakeLists.txt  README.md  main.go
src/: CMakeLists.txt  currency.cpp  rates.hpp
templates/: Doxyfile.in  currency.h.in
test/: CMakeLists.txt  README.md  fake.cpp  main.cpp
